Added image to fish-tacos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/fish-tacos.html"></a>
+    <a href="recipes/fish-tacos.html">Fish Tacos</a>
 </body>
 </html>
