--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Fish Tacos</h1>
+    <img src="../images/fish-tacos.jpeg" alt="Battered-fish-tacos" width="500px">
 </body>
 </html>
