--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fish Tacos</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Fish Tacos</h1>
-    <img src="../images/fish-tacos.jpeg" alt="Battered-fish-tacos" width="500px">
-</body>
+    <img
+      src="../images/fish-tacos.jpeg"
+      alt="Battered-fish-tacos"
+      width="300px"
+    />
+    <h2>Discription</h2>
+    <p>
+      These fish tacos taste just like home. I'm from San Diego, but we live in
+      the South now, and nobody has heard of fish tacos here! Serve with
+      homemade pico de gallo and lime wedges to squeeze on top.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>Beer Batter</li>
+      <li>White Sauce</li>
+      <li>Fish Tacos</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+      <li>
+        Make beer batter: Combine flour, cornstarch, baking powder, and salt in
+        a large bowl. Blend beer and egg in a separate bowl, then quickly stir
+        into flour mixture until combined with a few lumps remaining.
+      </li>
+      <li>
+        Make white sauce: Mix together yogurt and mayonnaise in a medium bowl.
+        Gradually stir in fresh lime juice until consistency is slightly runny.
+        Season with jalapeño, capers, cayenne, oregano, cumin, and dill.
+      </li>
+      <li>
+        Start fish tacos: Heat oil in a deep-fryer to 375 degrees F (190 degrees
+        C).
+      </li>
+      <li>
+        Dust fish pieces lightly with flour. Dip into beer batter, then fry in
+        hot oil until crisp and golden brown. Drain on paper towels.
+      </li>
+      <li>
+        Lightly fry tortillas in hot oil until just crisped, but not too crisp.
+        Drain on paper towels.
+      </li>
+      <li>
+        Place fried fish in tortillas; top with shredded cabbage and white
+        sauce.
+      </li>
+    </ol>
+  </body>
 </html>
